Updating some functions to JDK17