@@ -24,7 +24,6 @@
 
 package me.zodac.folding.api.tc.validation;
 
-import static java.util.stream.Collectors.toList;
 import static me.zodac.folding.api.util.StringUtils.isBlank;
 import static me.zodac.folding.api.util.StringUtils.isBlankOrValidUrl;
 
@@ -78,7 +77,7 @@ public final class TeamValidator {
                 forumLink(teamRequest)
             )
             .filter(Objects::nonNull)
-            .collect(toList());
+            .toList();
 
         if (!failureMessages.isEmpty()) {
             return ValidationResult.failure(teamRequest, failureMessages);
@@ -120,7 +119,7 @@ public final class TeamValidator {
                 forumLink(teamRequest)
             )
             .filter(Objects::nonNull)
-            .collect(toList());
+            .toList();
 
         if (!failureMessages.isEmpty()) {
             return ValidationResult.failure(teamRequest, failureMessages);
@@ -170,7 +169,7 @@ public final class TeamValidator {
             .stream()
             .filter(user -> user.getTeam().getId() == teamId)
             .map(User::hidePasskey)
-            .collect(toList());
+            .toList();
     }
 
     private static String teamName(final TeamRequest teamRequest) {
